# 5-deploy-ml

./: .env.example  .gitignore  README.md  app.py  conftest.py  create_db.py  database.py  insert_data.py  model.joblib  pyproject.toml  requirements.txt  schemas.py  test_app.py  test_utils.py  utils.py
.github/workflows/: main.yml
